// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns and Rows with different properties 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
}

@media screen and (min-width:768px) {
  .c0 {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 16px;
  }

  .c0 div {
    grid-row: span 3;
  }

  .c0 .row-span-1 {
    grid-row: span 1;
  }

  .c0 .row-span-2 {
    grid-row: span 2;
  }

  .c0 .row-span-4 {
    grid-row: span 4;
  }

  .c0 .row-span-5 {
    grid-row: span 5;
  }

  .c0 .col-span-2 {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="row-span-2"
    >
      Left column desktop
    </div>
    <div
      class="row-span-4"
    >
      Right column desktop
    </div>
    <div
      class="col-span-1"
    >
      Span both columns desktop
    </div>
  </div>
</div>
`;

exports[`Right Column row height now spans 4/3 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
}

@media screen and (min-width:768px) {
  .c0 {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 16px;
  }

  .c0 div {
    grid-row: span 3;
  }

  .c0 .row-span-1 {
    grid-row: span 1;
  }

  .c0 .row-span-2 {
    grid-row: span 2;
  }

  .c0 .row-span-4 {
    grid-row: span 4;
  }

  .c0 .row-span-5 {
    grid-row: span 5;
  }

  .c0 .col-span-2 {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

<div>
  <div
    class="c0"
  >
    <div>
      Left column desktop
    </div>
    <div
      class="row-span-4"
    >
      Right column desktop
    </div>
  </div>
</div>
`;

exports[`Right Column row height now spans 5/3 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
}

@media screen and (min-width:768px) {
  .c0 {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 16px;
  }

  .c0 div {
    grid-row: span 3;
  }

  .c0 .row-span-1 {
    grid-row: span 1;
  }

  .c0 .row-span-2 {
    grid-row: span 2;
  }

  .c0 .row-span-4 {
    grid-row: span 4;
  }

  .c0 .row-span-5 {
    grid-row: span 5;
  }

  .c0 .col-span-2 {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

<div>
  <div
    class="c0"
  >
    <div>
      Left column desktop
    </div>
    <div
      class="row-span-5"
    >
      Right column desktop
    </div>
  </div>
</div>
`;

exports[`Right Column row height only 1/3 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
}

@media screen and (min-width:768px) {
  .c0 {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 16px;
  }

  .c0 div {
    grid-row: span 3;
  }

  .c0 .row-span-1 {
    grid-row: span 1;
  }

  .c0 .row-span-2 {
    grid-row: span 2;
  }

  .c0 .row-span-4 {
    grid-row: span 4;
  }

  .c0 .row-span-5 {
    grid-row: span 5;
  }

  .c0 .col-span-2 {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

<div>
  <div
    class="c0"
  >
    <div>
      Left column desktop
    </div>
    <div
      class="row-span-1"
    >
      Right column desktop
    </div>
  </div>
</div>
`;

exports[`Right Column row height only 2/3 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
}

@media screen and (min-width:768px) {
  .c0 {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 16px;
  }

  .c0 div {
    grid-row: span 3;
  }

  .c0 .row-span-1 {
    grid-row: span 1;
  }

  .c0 .row-span-2 {
    grid-row: span 2;
  }

  .c0 .row-span-4 {
    grid-row: span 4;
  }

  .c0 .row-span-5 {
    grid-row: span 5;
  }

  .c0 .col-span-2 {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

<div>
  <div
    class="c0"
  >
    <div>
      Left column desktop
    </div>
    <div
      class="row-span-2"
    >
      Right column desktop
    </div>
  </div>
</div>
`;

exports[`Standard equal size columns 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
}

@media screen and (min-width:768px) {
  .c0 {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 16px;
  }

  .c0 div {
    grid-row: span 3;
  }

  .c0 .row-span-1 {
    grid-row: span 1;
  }

  .c0 .row-span-2 {
    grid-row: span 2;
  }

  .c0 .row-span-4 {
    grid-row: span 4;
  }

  .c0 .row-span-5 {
    grid-row: span 5;
  }

  .c0 .col-span-2 {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

<div>
  <div
    class="c0"
  >
    <div>
      Left column desktop
    </div>
    <div>
      Right column desktop
    </div>
  </div>
</div>
`;

exports[`Third div now spans both columns, making it a single column 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
}

@media screen and (min-width:768px) {
  .c0 {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 16px;
  }

  .c0 div {
    grid-row: span 3;
  }

  .c0 .row-span-1 {
    grid-row: span 1;
  }

  .c0 .row-span-2 {
    grid-row: span 2;
  }

  .c0 .row-span-4 {
    grid-row: span 4;
  }

  .c0 .row-span-5 {
    grid-row: span 5;
  }

  .c0 .col-span-2 {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}

<div>
  <div
    class="c0"
  >
    <div>
      Left column desktop
    </div>
    <div>
      Right column desktop
    </div>
    <div
      class="col-span-1"
    >
      Span both columns desktop
    </div>
  </div>
</div>
`;
